--- a/tweet-ui/src/main/res/values-da/strings.xml
+++ b/tweet-ui/src/main/res/values-da/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Åbn i Vine</string>
     <string name="tw__like_tweet">Like Tweet</string>
     <string name="tw__liked_tweet">Fjern like</string>
     <string name="tw__loading_tweet">Indlæser tweet</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet fra %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Del tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Tweet-medie</string>
 </resources>
