--- a/tweet-ui/src/main/res/values-ta/strings.xml
+++ b/tweet-ui/src/main/res/values-ta/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Vine -இல் திற</string>
     <string name="tw__like_tweet">கீச்சை விரும்பு</string>
     <string name="tw__liked_tweet">விரும்பியதை செயல்தவிர்</string>
     <string name="tw__loading_tweet">ட்விட்டை ஏற்றுகிறது</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">%1$s (\@%2$s) -இடமிருந்து ட்விட்</string>
     <string name="tw__share_tweet">ட்விட்டைப் பகிர்</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">கீச்சு ஊடகம்</string>
 </resources>
