--- a/tweet-ui/src/main/res/values-bg/strings.xml
+++ b/tweet-ui/src/main/res/values-bg/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">Туит от %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Споделяне на туита</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Туитване на мултимедия</string>
 </resources>
