--- a/tweet-ui/src/main/res/values-cs/strings.xml
+++ b/tweet-ui/src/main/res/values-cs/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Otevřít v aplikaci Vine</string>
     <string name="tw__like_tweet">Lajknout Tweet</string>
     <string name="tw__liked_tweet">Vzít lajk zpět</string>
     <string name="tw__loading_tweet">Načítání tweetu</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet od uživatele %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Sdílet tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Tweetnout média</string>
 </resources>
