--- a/tweet-ui/src/main/res/values-el/strings.xml
+++ b/tweet-ui/src/main/res/values-el/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet από το χρήστη %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Κοινοποίηση Tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Γράψτε ένα Tweet με πολυμέσο</string>
 </resources>
