--- a/tweet-ui/src/main/res/values-en-rXX/strings.xml
+++ b/tweet-ui/src/main/res/values-en-rXX/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">[Twéêéêt fröøm %1$s (\@%2$s)]</string>
     <string name="tw__share_tweet">[Shåäréê Twéêéêt]</string>
     <string name="tw__tweet_content_description">[%1$s. %2$s. %3$s.]</string>
+    <string name="tw__tweet_media">[Twéêéêt Méêdïíåä]</string>
 </resources>
