--- a/tweet-ui/src/main/res/values-es/strings.xml
+++ b/tweet-ui/src/main/res/values-es/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Abrir en Vine</string>
     <string name="tw__like_tweet">Darle Me gusta al Tweet</string>
     <string name="tw__liked_tweet">Deshacer Me gusta</string>
     <string name="tw__loading_tweet">Cargando Tweet</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet de %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Compartir Tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Tweets con contenido multimedia</string>
 </resources>
