--- a/tweet-ui/src/main/res/values-fa/strings.xml
+++ b/tweet-ui/src/main/res/values-fa/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">باز کردن در Vine</string>
     <string name="tw__like_tweet">پسندیدن توییت</string>
     <string name="tw__liked_tweet">لغو پسندیدن</string>
     <string name="tw__loading_tweet">بارگیری توییت</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">توییت‌ از %1$s (‎\@%2$s)</string>
     <string name="tw__share_tweet">به اشتراک‌گذاری توییت</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">محتوای چند رسانه‌ای توییت</string>
 </resources>
