--- a/tweet-ui/src/main/res/values-gu/strings.xml
+++ b/tweet-ui/src/main/res/values-gu/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Vine માં ખોલો</string>
     <string name="tw__like_tweet">ટ્વીટ લાઈક કરો</string>
     <string name="tw__liked_tweet">લાઈક પૂર્વવત કરો</string>
     <string name="tw__loading_tweet">ટ્વીટ લોડ થઈ રહી છે</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">%1$s (\@%2$s) તરફથી ટ્વીટ</string>
     <string name="tw__share_tweet">ટ્વીટ શેર કરો</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">ટ્વીટ મીડિયા</string>
 </resources>
