--- a/tweet-ui/src/main/res/values-hi/strings.xml
+++ b/tweet-ui/src/main/res/values-hi/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Vine में खोलें</string>
     <string name="tw__like_tweet">ट्वीट पसंद करें</string>
     <string name="tw__liked_tweet">पसंद पूर्ववत करें</string>
     <string name="tw__loading_tweet">ट्वीट लोड हो रहे हैं</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">%1$s (\@%2$s) से ट्वीट</string>
     <string name="tw__share_tweet">ट्वीट साझा करें</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">ट्वीट मीडिया</string>
 </resources>
