--- a/tweet-ui/src/main/res/values-hu/strings.xml
+++ b/tweet-ui/src/main/res/values-hu/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet %1$s (\@%2$s) felhasználótól</string>
     <string name="tw__share_tweet">Tweet megosztása</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Média tweetelése</string>
 </resources>
