--- a/tweet-ui/src/main/res/values-iw/strings.xml
+++ b/tweet-ui/src/main/res/values-iw/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">פתח ב-Vine</string>
     <string name="tw__like_tweet">סמן ציוץ כאהוב</string>
     <string name="tw__liked_tweet">בטל סימון כאהוב</string>
     <string name="tw__loading_tweet">טוען ציוץ</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">ציוץ של %1$s‏ (‎\@%2$s)</string>
     <string name="tw__share_tweet">שתף ציוץ</string>
     <string name="tw__tweet_content_description">%1$s‏. %2$s‏. %3$s</string>
+    <string name="tw__tweet_media">המדיה של הציוץ</string>
 </resources>
