--- a/tweet-ui/src/main/res/values-ja/strings.xml
+++ b/tweet-ui/src/main/res/values-ja/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Vineで開く</string>
     <string name="tw__like_tweet">ツイートにいいねする</string>
     <string name="tw__liked_tweet">いいねを取り消す</string>
     <string name="tw__loading_tweet">ツイートを読込中</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">%1$s (\@%2$s)さんからのツイート</string>
     <string name="tw__share_tweet">ツイートを共有</string>
     <string name="tw__tweet_content_description">%1$s、 %2$s、 %3$s。</string>
+    <string name="tw__tweet_media">画像/動画を投稿</string>
 </resources>
