--- a/tweet-ui/src/main/res/values-mr/strings.xml
+++ b/tweet-ui/src/main/res/values-mr/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Vine मध्ये उघडा</string>
     <string name="tw__like_tweet">ट्विट पसंत करा</string>
     <string name="tw__liked_tweet">पसंती पूर्ववत करा</string>
     <string name="tw__loading_tweet">ट्विट लोड करीत आहे</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">%1$s (\@%2$s) कडील ट्विट</string>
     <string name="tw__share_tweet">ट्विट शेअर करा</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">ट्विट मिडिया</string>
 </resources>
