--- a/tweet-ui/src/main/res/values-nb/strings.xml
+++ b/tweet-ui/src/main/res/values-nb/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet fra %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Del tweeten</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Tweet-medium</string>
 </resources>
