--- a/tweet-ui/src/main/res/values-pl/strings.xml
+++ b/tweet-ui/src/main/res/values-pl/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Otwórz w Vine</string>
     <string name="tw__like_tweet">Polub Tweet</string>
     <string name="tw__liked_tweet">Nie lubię</string>
     <string name="tw__loading_tweet">Wczytywanie tweeta</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet od użytkownika %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Udostępnij tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Multimedia z Tweeta</string>
 </resources>
