--- a/tweet-ui/src/main/res/values-sk/strings.xml
+++ b/tweet-ui/src/main/res/values-sk/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet od používateľa %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Zdieľať Tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Tweetnuť médiá</string>
 </resources>
