--- a/tweet-ui/src/main/res/values-sr/strings.xml
+++ b/tweet-ui/src/main/res/values-sr/strings.xml
@@ -30,4 +30,5 @@
     <string name="tw__share_subject_format">Твит од %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Подели твит</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Mедиј из твита</string>
 </resources>
