--- a/tweet-ui/src/main/res/values-vi/strings.xml
+++ b/tweet-ui/src/main/res/values-vi/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">Mở trên Vine</string>
     <string name="tw__like_tweet">Thích Tweet</string>
     <string name="tw__liked_tweet">Hoàn tác Thích</string>
     <string name="tw__loading_tweet">Đang tải Tweet</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">Tweet từ %1$s (\@%2$s)</string>
     <string name="tw__share_tweet">Chia sẻ Tweet</string>
     <string name="tw__tweet_content_description">%1$s. %2$s. %3$s.</string>
+    <string name="tw__tweet_media">Tweet Phương tiện</string>
 </resources>
