--- a/tweet-ui/src/main/res/values-zh-rTW/strings.xml
+++ b/tweet-ui/src/main/res/values-zh-rTW/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="tw__cta_text">在 Vine 中開啟</string>
     <string name="tw__like_tweet">喜歡推文</string>
     <string name="tw__liked_tweet">取消喜歡</string>
     <string name="tw__loading_tweet">正在載入推文</string>
@@ -29,4 +30,5 @@
     <string name="tw__share_subject_format">來自 %1$s (\@%2$s) 的推文</string>
     <string name="tw__share_tweet">分享推文</string>
     <string name="tw__tweet_content_description">%1$s。%2$s。%3$s。</string>
+    <string name="tw__tweet_media">推文媒體</string>
 </resources>
