Add support for RecyclerView
Change-Id: Idc00c19e45a44c1c7593d4d3289b3fe0bfb8ff8f

--- a/samples/app/src/main/res/values/strings.xml
+++ b/samples/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="button_timelines_activity">Timelines</string>
     <string name="search_timeline_title">Search Timeline</string>
     <string name="user_timeline_title">User Timeline</string>
+    <string name="user_recycler_view_timeline_title">User RecyclerView Timeline</string>
     <string name="collection_timeline_title">Collection Timeline</string>
     <string name="list_timeline_title">List Timeline</string>
     <string name="fixed_timeline">Fixed Timeline</string>
